# WorkGithubX.io

./: .gitignore  CMake-VCPKG.cpp  CMake-VCPKG.h  CMakeLists.txt  CMakeSettings.json  Doxyfile  Doxyfile.bak  main.cpp  main.h
.github/workflows/: cmake-single-platform.yml
docs/html/: index.html  navtreedata.js
docs/latex/: refman.tex
html/: _c_make-_v_c_p_k_g_8h_source.html  doxygen_crawl.html  emoji.py  files.html  files_dup.js  main_8h_source.html  navtreedata.js  navtreeindex0.js
latex/: _c_make-_v_c_p_k_g_8h_source.tex  files.tex  main_8h_source.tex  refman.tex
